# inventory-system

./: LICENSE  pyproject.toml
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py
items/: admin.py  models.py
items/migrations/: 0001_initial.py  0002_item_supplier.py  0003_item_currency_item_item_photo.py  0004_remove_item_supplier_item_created_at_item_suppliers_and_more.py  0005_alter_item_item_photo_alter_item_suppliers.py  0006_item_category.py  0007_item_qty.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_order_order_qty.py
suppliers/: admin.py  models.py
suppliers/migrations/: 0001_initial.py  0002_alter_supplier_address_alter_supplier_name.py  0003_supplier_created_at_supplier_updated_at.py  0004_supplier_category.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
