[tool.poetry]
name = "inventory-system"
version = "0.1.0"
description = "Inventory management system"
authors = ["seanhoonc <seanhoonc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
